# rover

./: LICENSE  README.md
host-configs/: boden.cmake  slurm-123943.out  surface86.cmake
src/: CMakeLists.txt
src/CMake/: CMakeBasics.cmake  RoverConfig.cmake.in  SetupIncludes.cmake  SetupTBB.cmake  SetupTests.cmake
src/examples/: CMakeLists.txt
src/examples/build-with-cmake/: CMakeLists.txt  FindRover.cmake  FindVTKm.cmake  example.cpp
src/examples/noise/: CMakeLists.txt  noise.cpp
src/rover/: CMakeLists.txt  Engine.hpp  compositor.hpp  domain.cpp  domain.hpp  domian.hpp  energy_engine.cpp  energy_engine.hpp  engine.hpp  image.cpp  image.hpp  rover.cpp  rover.hpp  rover_exceptions.hpp  rover_types.hpp  schedular.cpp  schedular.hpp  scheduler.cpp  scheduler.hpp  static_schedular.hpp  static_scheduler.hpp  volume_engine.cpp  volume_engine.hpp  vtkm_typedefs.hpp
src/rover/compositing/: .partial_composite_sorter.hpp.swp  absorption_block.hpp  absorption_partial.hpp  absorption_redistribute.hpp  blocks.hpp  collect.hpp  compositor.cpp  compositor.hpp  emission_partial.hpp  partial_composite_sorter.hpp  redistribute.hpp  volume_block.hpp  volume_partial.hpp  volume_redistribute.hpp
src/rover/ray_containers/: ray_container.hpp
src/rover/ray_generators/: camera_generator.cpp  camera_generator.h  camera_generator.hpp  ray_generator.cpp  ray_generator.hpp  visit_generator.cpp  visit_generator.hpp
src/rover/utils/: material_database.cpp  material_database.hpp  png_encoder.cpp  png_encoder.hpp  rover_logging.cpp  rover_logging.hpp  vtk_dataset_reader.cpp  vtk_dataset_reader.hpp
src/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestingUtils.h  TestingUtils.h~  Volume.cu  cmake_install.cmake  testvolume.cxx  testvolume_tbb.cxx
src/tests/rover/: CMakeLists.txt  material_database.hpp  t_rover_energy_clock.cpp  t_rover_energy_emission_hex_32.cpp  t_rover_energy_hardy.cpp  t_rover_energy_hex_32.cpp  t_rover_energy_hex_64.cpp  t_rover_energy_zoo_32.cpp  t_rover_hex.cpp  t_rover_multi_empty.cpp  t_rover_multi_energy_emission_hex_32_par.cpp  t_rover_multi_energy_empty_domain_par.cpp  t_rover_multi_energy_hex_32_par.cpp  t_rover_multi_nyx_par.cpp  t_rover_multi_volume_hex_32.cpp  t_rover_multi_volume_hex_32_par.cpp  t_rover_smoke.cpp  t_rover_volume_hex_32.cpp  t_rover_volume_hex_64.cpp  t_rover_volume_uni_32.cpp  t_rover_volume_zoo_32.cpp  test_config.h.in  test_utils.hpp  vtkm_utils.hpp
src/tests/rover/data/: astro10Uni.vtk  hardy.vtk  luleshSpeed.vtk  zoo_slim.vtk
src/tests/rover/data/multi_domain/: lulesh_multi_domaim.1.vtk  lulesh_multi_domaim.2.vtk  lulesh_multi_domaim.5.vtk  lulesh_multi_domaim.6.vtk  lulesh_multi_domaim.visit  lulesh_multi_domain.0.vtk  lulesh_multi_domain.1.vtk  lulesh_multi_domain.2.vtk  lulesh_multi_domain.3.vtk  lulesh_multi_domain.4.vtk  lulesh_multi_domain.5.vtk  lulesh_multi_domain.6.vtk  lulesh_multi_domain.7.vtk  lulesh_multi_domain.visit  nyx_small.0.vtk  nyx_small.1.vtk  nyx_small.10.vtk  nyx_small.2.vtk  nyx_small.3.vtk  nyx_small.4.vtk  nyx_small.5.vtk  nyx_small.6.vtk  nyx_small.7.vtk  nyx_small.8.vtk  nyx_small.9.vtk  nyx_small.visit
src/thirdparty_builtin/: CMakeLists.txt
src/thirdparty_builtin/diy2/include/diy/: master.hpp
src/thirdparty_builtin/lodepng/: CMakeLists.txt
