###############################################################################
#
# 
# 
###############################################################################


################################
# Add lodepng 
################################
#add_subdirectory(lodepng)

################################
# Add lodepng 
################################
add_subdirectory(gtest-1.7.0)








